# reversi

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  DEVLOG.md  GUIDE.md  LICENSE  README.md  RUNDOWN.cpp
.github/workflows/: ci.yml
app/: CMakeLists.txt  win_resources.rc
app/src/: BoardWidget.cpp  BoardWidget.hpp  GameController.cpp  GameController.hpp  GameMode.hpp  GameNotation.cpp  GameNotation.hpp  MainWindow.cpp  MainWindow.hpp  Palette.cpp  Palette.hpp  SettingsDialog.cpp  SettingsDialog.hpp  TitleBarWidget.cpp  TitleBarWidget.hpp  main.cpp
app/tests/: game_notation_test.cpp
assets/: reversi.icns
cli/: CMakeLists.txt
cli/src/: main.cpp
engine/: CMakeLists.txt
engine/include/reversi/: analysis.hpp  cancellation.hpp  eval.hpp  move_selector.hpp  moves.hpp  mpc.hpp  opening_book.hpp  pattern.hpp  pattern_eval.hpp  perft.hpp  players.hpp  position.hpp  search.hpp  selfplay.hpp  shared_tt.hpp  solver.hpp  tt.hpp
engine/src/: analysis.cpp  eval.cpp  move_selector.cpp  moves.cpp  mpc.cpp  opening_book.cpp  pattern.cpp  pattern_eval.cpp  perft.cpp  players.cpp  position.cpp  search.cpp  selfplay.cpp  shared_tt.cpp  solver.cpp  tt.cpp
packaging/windows/: reversi.iss.in
tests/: CMakeLists.txt
tests/data/: README.md  ffo_easy.txt
tests/engine/: analysis_test.cpp  aspiration_test.cpp  differential_test.cpp  eval_test.cpp  exit_criterion_m4_test.cpp  exit_criterion_m6_test.cpp  exit_criterion_m7_test.cpp  exit_criterion_m8_test.cpp  ffo_test.cpp  move_selector_test.cpp  moves_test.cpp  mpc_search_test.cpp  mpc_test.cpp  naive_reference_test.cpp  opening_book_test.cpp  ordering_test.cpp  pattern_eval_test.cpp  pattern_test.cpp  perft_test.cpp  players_test.cpp  position_test.cpp  search_excluding_test.cpp  search_iterative_test.cpp  search_lazy_smp_test.cpp  search_test.cpp  selfplay_test.cpp  shared_tt_test.cpp  solver_ordering_test.cpp  solver_test.cpp  solver_tt_test.cpp  tt_test.cpp
tests/support/: baseline_search.cpp  baseline_search.hpp  baseline_solver.cpp  baseline_solver.hpp  benchmark_positions.cpp  benchmark_positions.hpp  endgame_positions.cpp  endgame_positions.hpp  ffo.cpp  ffo.hpp  naive_reference.cpp  naive_reference.hpp  search_checks.cpp  search_checks.hpp
tools/: CMakeLists.txt  README.md  requirements.txt  train_pattern_eval.py
tools/mpc_fitter/: CMakeLists.txt
tools/mpc_fitter/include/mpc_fitter/: dataset.hpp  fit.hpp
tools/mpc_fitter/src/: dataset.cpp  fit.cpp  main.cpp
tools/mpc_fitter/tests/: dataset_test.cpp  fit_test.cpp
tools/wthor_extractor/: CMakeLists.txt
tools/wthor_extractor/include/wthor_extractor/: book.hpp  dataset.hpp  parser.hpp
tools/wthor_extractor/src/: book.cpp  dataset.cpp  main.cpp  parser.cpp
tools/wthor_extractor/tests/: book_test.cpp  dataset_test.cpp  parser_test.cpp
